# langgraph_project

./: .env.example  docker-compose.yml  pyproject.toml
services/backend/src/api/: main.py
services/backend/src/api/routers/: ui.py
services/backend/src/assistant/api/: main.py
services/backend/src/assistant/api/routers/: chat.py  eval.py  ui.py
services/backend/src/assistant/graphs/: chat.py  db_agent.py
services/backend/src/assistant/search/: qdrant.py
services/backend/src/assistant/ui/: server.py  store.py  widgets.py
services/backend/src/assistant/utils/: fill_db.py  langfuse_test.py  streaming.py
services/backend/src/graphs/: chat.py  db_agent.py
services/backend/src/search/: qdrant.py
services/backend/src/ui/: server.py  store.py  widgets.py
services/backend/src/utils/: fill_db.py  langfuse_test.py  streaming.py
services/frontend/: index.html  package-lock.json  package.json  vite.config.ts
services/frontend/src/: App.tsx
src/api/: config.py  main.py
src/api/routers/: chat.py
src/graphs/: chat.py  db_agent.py  prompts.py
src/search/: qdrant.py
src/ui/: server.py  store.py
src/utils/: fill_db.py  langfuse_test.py  streaming.py
tests/: test_tools.py
